@@ -370,8 +370,8 @@ AC_ARG_ENABLE(ipv6,
 dnl Sendfile support.
 AC_ARG_ENABLE(sendfile,
   [AC_HELP_STRING(
-    [--enable-sendfile],
-    [enable sendfile support (default=no)])
+    [--disable-sendfile],
+    [disable sendfile support (default=no)])
   ])
 
 dnl Check for enabled shadow password support.
@@ -1113,7 +1113,7 @@ PR_CHECK_SS_FAMILY
 PR_CHECK_SS_LEN
 
 dnl sendfile() checks
-if test x"$enable_sendfile" = xyes ; then
+if test x"$enable_sendfile" != xno ; then
   AC_CACHE_CHECK(
     [which sendfile() implementation to use],
     pr_cv_func_sendfile,
